--- a/html1/testimonials.html
+++ b/html1/testimonials.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>team</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/test.css">
+    <link rel="stylesheet" href="../css/test.css">
     <link rel="stylesheet" href=" https://pro.fontawesome.com/releases/v5.10.0/css/all.css"">
 </head>
 <body>
