--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="/css/home.css">
    <link rel="stylesheet" href=" https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inconsolata:wght@300;800;900&family=Josefin+Sans:wght@300;500;600;700&family=Poppins:ital,wght@0,200;0,500;0,700;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
