--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
    
 </div>
-<div class="image"><img src="pictures/me.png" alt="image"></div>
+<div class="image"><img src="/pictures/me.png" alt="image"></div>
 <div class="social">
      <a href=""><img src="pictures/fb.png" alt="image"></a> <br>
     <a href=""><img src="pictures/tiwt.png" alt="image"> </a> <br>
@@ -51,6 +51,7 @@
         <a href=""><img src="pictures/lin.png.png" alt="image"></a>
         <p> TigistZelalem &copy; </p>
      </div>
+
 
 </div>
 </body> 
